--- a/Views/Reservation/Index.cshtml
+++ b/Views/Reservation/Index.cshtml
@@ -1,150 +1,29 @@
 ﻿@model ReservationViewModel
 
-@{
-    
-}
+<a asp-controller="Reservation" asp-action="Create">
+    <button>Create reservation</button>
+</a>
 
-<div class="d-flex flex-column">
-    @using (Html.BeginForm("Index", "Reservation", FormMethod.Get))
-    {
-        <div class="row m-3">
-            <p class="row display-6">Choose employee</p>
-        </div>
-        <div class="row m-2">
-            <div class="col-sm-12">
-                @Html.DropDownList("employeeId",
-                    Model.Employees.Select(x => new SelectListItem
-                    {
-                        Text = x.Name,
-                        Value = x.Id.ToString(),
-                        Selected = x.Id == Model.SelectedEmployeeId
-                    }), new {@class="form-control"})
-            </div>
-        </div>
-        <div class="row m-3">
-            <p class="row display-6">Choose dates</p>
-        </div>
-        <div class="row m-2">
-            <label class="col-sm-1 col-form-label">From</label>
-            <div class="col-sm-4">
-                <input class="form-control" name="from" asp-for="TimeFrom" />
-            </div>
-        </div>
-        <div class="row m-2">
-            <label class="col-sm-1 col-form-label">To</label>
-            <div class="col-sm-4">
-                <input class="form-control" name="to" asp-for="TimeTo" />
-            </div>
-        </div>
-        <div class="row m-2">
-            <div class="col-sm-1"></div>
-            <div class="col-sm-4">
-                <button class="btn btn-primary" type="submit">Show workplaces</button>
-            </div>
-        </div>
-        <div class="row m-3">
-            <p class="row display-6">Choose workplace</p>
-        </div>
-        <div class="row m-2">
-            <table class="table table-hover table-bordered">
-                <thead class="table-dark">
-                    <th>Floor</th>
-                    <th>Room</th>
-                    <th>Table</th>
-                    <th>Equipment</th>
-                    <th></th>
-                    <th>TMP IsReserved</th>
-                </thead>
-                <tbody>
-                    @foreach (var row in Model.Workplaces)
-                    {
-                        <tr>
-                            <td>@row.Floor</td>
-                            <td>@row.Room</td>
-                            <td>@row.Table</td>
-                            <td>
-                                @foreach (var eq in row.Equipment)
-                                {
-                                    <div>
-                                        @eq.Type - @eq.Count
-                                    </div>
-                                }
-                            </td>
-                            <td>
-                                <button class="btn btn-primary w-100" type="submit" name="workplaceId" value="@row.Id">Choose</button>
-                            </td>
-                            <td>
-                                @row.IsReserved
-                            </td>
-                        </tr>
-                    }
-                </tbody>
-            </table>
-        </div>
-    }
-
-    @using (Html.BeginForm("Create", "Reservation", FormMethod.Post))
-    {
-        <input type="hidden" name="EmployeeId" value="@Model.SelectedEmployeeId">
-        <input type="hidden" name="From" value="@Model.TimeFrom">
-        <input type="hidden" name="To" value="@Model.TimeTo">
-        <input type="hidden" name="WorkplaceId" value="@Model.SelectedWorkplaceId">
-
-        if (Model.SelectedWorkplace != null)
+<table class="table table-sm table-hover table-bordered">
+    <thead class="table-dark">
+    <th>Employee</th>
+    <th>From</th>
+    <th>To</th>
+    <th>Floor</th>
+    <th>Room</th>
+    <th>Table</th>
+    </thead>
+    <tbody>
+        @foreach (var row in Model.Reservations)
         {
-            <div class="row m-3">
-                <p class="row display-6">Selected workplace</p>
-            </div>
-            <div class="row m-2">
-                <table class="table table-bordered">
-                    <thead class="table-primary">
-                        <th>Floor</th>
-                        <th>Room</th>
-                        <th>Table</th>
-                        <th>Equipment</th>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>@Model.SelectedWorkplace.Floor</td>
-                            <td>@Model.SelectedWorkplace.Room</td>
-                            <td>@Model.SelectedWorkplace.Table</td>
-                            <td>
-                                @foreach (var eq in Model.SelectedWorkplace.Equipment)
-                                {
-                                    <div>
-                                        @eq.Type - @eq.Count
-                                    </div>
-                                }
-                            </td>
-                        </tr>                      
-                    </tbody>
-                </table>
-            </div>
-        
-            <div class="row m-3">
-                <p class="row display-6">Additional equipment</p>
-            </div>
-
-            int i = 0;
-            foreach (var eq in Model.AvailableEquipment)
-            {
-                <div class="row m-2">
-                    <label class="col-sm-1 col-form-label">@eq.Type</label>
-                    <div class="col-sm-1">
-                        <input type="hidden" name="AdditionalEquipment[@i].Id" value="@eq.Id">
-                        <input class="form-control" type="number" min="0" max="@eq.Count" name="AdditionalEquipment[@i].Count" value="0" />
-                    </div>
-                    <label class="col-sm-4 col-form-label">@eq.Count available</label>
-                </div>
-                i++;
-            }
-        
-            <div class="row m-2">
-                <div class="col-sm-1"></div>
-                <div class="col-sm-4">
-                    <button class="btn btn-success" type="submit" disabled="@(Model.SelectedWorkplaceId == 0)">Reserve workplace</button>
-                </div>
-            </div>
+            <tr>
+                <td>@row.EmployeeName</td>
+                <td>@row.TimeFrom</td>
+                <td>@row.TimeTo</td>
+                <td>@row.Floor</td>
+                <td>@row.Room</td>
+                <td>@row.Table</td>
+            </tr>
         }
-    }
-</div>
+    </tbody>
+</table>
