--- a/Views/Reservation/Create.cshtml
+++ b/Views/Reservation/Create.cshtml
@@ -1,7 +1,6 @@
 ﻿@model CreateReservationViewModel
-
 @{
-    
+    ViewData["Title"] = "Create reservation";
 }
 
 <div class="d-flex flex-column">
