--- a/Views/Reservation/Index.cshtml
+++ b/Views/Reservation/Index.cshtml
@@ -1,4 +1,7 @@
 ﻿@model ReservationViewModel
+@{
+    ViewData["Title"] = "Reservation";
+}
 
 <a asp-controller="Reservation" asp-action="Create">
     <button class="btn btn-primary mb-2">Create reservation</button>
