fix wrong text in .cshtml

--- a/Views/Employee/Index.cshtml
+++ b/Views/Employee/Index.cshtml
@@ -16,7 +16,7 @@
             </div>
         </div>
         <div class="row m-2">
-            <label class="col-sm-1 col-form-label">Equipment</label>
+            <label class="col-sm-1 col-form-label">Last Name</label>
             <div class="col-sm-4">
                 <input class="form-control" type="text" name="LastName">
             </div>
