--- a/Views/Reservation/Create.cshtml
+++ b/Views/Reservation/Create.cshtml
@@ -139,7 +139,7 @@
             }
             else
             {
-                <div class="row m-3">You cannot choose additional equipment to workplaces reserved in the future</div>
+                <div class="row m-3">You cannot choose additional equipment to workplaces that the reservation did not end yet and those reserved in the future</div>
             }
             <div class="row m-2">
                 <div class="col-sm-4">
